Реализованы 4 минимальных метода.
